--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,9 +26,10 @@ services:
         env_file:
             -   .env
         environment:
-            - '${POSTGRES_USER:-postgres}'
-            - '${POSTGRES_PASSWORD:-postgres}'
-            - '${POSTGRES_DB:-golang_db}'
+            environment:
+                - POSTGRES_USER=${POSTGRES_USER:-postgres}
+                - POSTGRES_PASSWORD=${POSTGRES_PASSWORD:-postgres}
+                - POSTGRES_DB=${POSTGRES_DB:-golang_db}
         volumes:
             - postgres_data:/var/lib/postgresql/data
         networks:
